[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://Test.gd" type="Script" id=2]
[ext_resource path="res://Simulator.tscn" type="PackedScene" id=3]
[ext_resource path="res://Modes.gd" type="Script" id=4]
[ext_resource path="res://ui/add.png" type="Texture" id=5]
[ext_resource path="res://ui/sub.png" type="Texture" id=6]
[ext_resource path="res://SimSlider.tscn" type="PackedScene" id=7]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=2]

[node name="Test" type="Control"]
margin_right = 526.0
margin_bottom = 546.0
rect_min_size = Vector2( 526, 545 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 512.0
margin_bottom = 670.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Simulator" parent="VBoxContainer" instance=ExtResource( 3 )]
splat_radius = 10.0
brush_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 512.0
margin_right = 512.0
margin_bottom = 660.0
rect_min_size = Vector2( 512, 148 )

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_right = 512.0
margin_bottom = 148.0

[node name="Offset" type="Control" parent="VBoxContainer/PanelContainer/HBox"]
margin_bottom = 148.0

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBox"]
margin_left = 4.0
margin_right = 508.0
margin_bottom = 148.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer/HBox/VBox"]
margin_right = 504.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBox/VBox"]
margin_top = 4.0
margin_right = 504.0
margin_bottom = 30.0

[node name="Surface" type="Label" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer"]
margin_top = 3.0
margin_right = 60.0
margin_bottom = 23.0
text = "Surface:"

[node name="MenuButton" type="OptionButton" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer"]
margin_left = 64.0
margin_right = 194.0
margin_bottom = 26.0
rect_min_size = Vector2( 130, 0 )
hint_tooltip = "Surface mode selector
Use 'Q' and 'E' to switch between them"
text = "Density"
script = ExtResource( 4 )

[node name="Mode" type="Label" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer"]
margin_left = 198.0
margin_top = 3.0
margin_right = 244.0
margin_bottom = 23.0
text = "Mode:"

[node name="Add" type="Button" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer"]
margin_left = 248.0
margin_right = 276.0
margin_bottom = 26.0
hint_tooltip = "Add mode
Use 'Space' to switch between them"
toggle_mode = true
pressed = true
group = SubResource( 1 )
icon = ExtResource( 5 )

[node name="Sub" type="Button" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer"]
margin_left = 280.0
margin_right = 308.0
margin_bottom = 26.0
hint_tooltip = "Subtract mode
Use 'Space' to switch between them"
toggle_mode = true
group = SubResource( 1 )
icon = ExtResource( 6 )

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer"]
margin_left = 312.0
margin_right = 384.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer"]
margin_left = 388.0
margin_right = 504.0
margin_bottom = 26.0
hint_tooltip = "Cleanup simulation
Hotkey: 'C'"
text = "Clear surfaces"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PanelContainer/HBox/VBox"]
margin_top = 34.0
margin_right = 504.0
margin_bottom = 38.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBox/VBox"]
margin_top = 42.0
margin_right = 504.0
margin_bottom = 68.0

[node name="InputSetupMode" type="Button" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 26.0
hint_tooltip = "Input tab
Use 'F' key to switch tabs"
toggle_mode = true
pressed = true
group = SubResource( 2 )
text = "Input"

[node name="SimulationSetupMode" type="Button" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer2"]
margin_left = 54.0
margin_right = 142.0
margin_bottom = 26.0
hint_tooltip = "Simulation  tab
Use 'F' key to switch tabs"
toggle_mode = true
group = SubResource( 2 )
text = "Simulation"

[node name="Offset" type="Control" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer2"]
margin_left = 146.0
margin_right = 359.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="ResetAllSettings" type="Button" parent="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer2"]
margin_left = 363.0
margin_right = 504.0
margin_bottom = 26.0
text = "Reset all settings"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/PanelContainer/HBox/VBox"]
margin_top = 72.0
margin_right = 504.0
margin_bottom = 76.0

[node name="InputSettings" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBox/VBox"]
margin_top = 80.0
margin_right = 504.0
margin_bottom = 144.0

[node name="Radius" parent="VBoxContainer/PanelContainer/HBox/VBox/InputSettings" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 504.0
margin_bottom = 30.0
max_value = 30.0
step = 1.0
defval = 10.0

[node name="Force" parent="VBoxContainer/PanelContainer/HBox/VBox/InputSettings" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 504.0
margin_bottom = 64.0
max_value = 1.0
step = 0.1
defval = 1.0

[node name="SimulationSettings" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBox/VBox"]
visible = false
margin_top = 66.0
margin_right = 498.0
margin_bottom = 118.0

[node name="Viscocity" parent="VBoxContainer/PanelContainer/HBox/VBox/SimulationSettings" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 498.0
margin_bottom = 24.0
max_value = 5.0
step = 0.1

[node name="Vorticity" parent="VBoxContainer/PanelContainer/HBox/VBox/SimulationSettings" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 498.0
margin_bottom = 52.0
max_value = 5.0
step = 0.1

[node name="Offset2" type="Control" parent="VBoxContainer/PanelContainer/HBox"]
margin_left = 512.0
margin_right = 512.0
margin_bottom = 148.0
[connection signal="item_selected" from="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer/MenuButton" to="." method="_on_MenuButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer/Sub" to="." method="_on_Sub_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer2/InputSetupMode" to="." method="_on_InputSetupMode_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer2/SimulationSetupMode" to="." method="_on_SimulationSetupMode_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBox/VBox/HBoxContainer2/ResetAllSettings" to="." method="_on_ResetAllSettings_pressed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/HBox/VBox/InputSettings/Radius" to="." method="_on_Radius_value_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/HBox/VBox/InputSettings/Force" to="." method="_on_Force_value_changed"]
